--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <noscript>
       <strong>We're sorry but vue-template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">正在加载中，请稍后</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
